k8s/dnsutils.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  namespace: default

spec:
  containers:
  - name: dnsutils
    image: gcr.io/kubernetes-e2e-test-image/dnsutils:1.3
    command:
      - sleep
      - "3600"
      imagePullPolicy: IfNotPresent
    restartPolicy: Always
