k8s/mybackend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybackend-deployment
  labels:
    component: backend
    app: myapp

spec:
  template:
    metadata:
      name: mybackend-pod
      labels:
        component: backend
        app: myapp
    spec:
      containers:
        - name: mybackend-container
          image: devipod/mybackend
  replicas: 3
  selector: 
    matchLabels: 
      app: myapp
      component: backend
