k8s/mynginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynginx-deployment
  labels:
    component: web
    app: myapp

spec:
  template:
    metadata:
      name: mynginx-pod
      labels:
        component: web
        app: myapp
    spec:
      containers:
        - name: mynginx-container
          image: devipod/myfrontend
  replicas: 3
  selector: 
    matchLabels: 
      app: myapp
      component: web
