k8s/mynginx-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: mynginx-clusterip

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  
  selector:
    component: web 
    app: myapp
