k8s/mynginx-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: mynginx-node-port

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32000
  
  selector:
    component: web 
    app: myapp
